--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.35",
     "gatsby-image": "^2.4.4",
+    "gatsby-plugin-layout": "^1.3.2",
     "gatsby-plugin-manifest": "^2.4.4",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-sharp": "^2.5.2",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
