--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-transitions": "^2.1.6",
-    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-source-contentful": "^2.3.10",
+    "gatsby-source-filesystem": "^2.3.7",
+    "gatsby-transformer-json": "^2.4.3",
     "gatsby-transformer-sharp": "^2.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
