--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-spring": "^8.0.27",
+    "react-waypoint": "^9.0.2",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.1.0"
   },
